# chinese-number

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: chinese_big_number_count_method.rs  chinese_case.rs  chinese_characters.rs  chinese_count_method.rs  chinese_number_case.rs  chinese_number_count_method.rs  chinese_number_parse_error.rs  chinese_variant.rs  constants.rs  inner_functions.rs  lib.rs  tests.rs
src/chinese_to_number/: chinese_to_number_error.rs  error.rs  functions.rs  functions_test.rs  mod.rs  naive.rs  traits.rs
src/chinese_to_number/crazy_functions/: chinese_digit_10_000_000_000_000_000_middle_compat.rs  mod.rs
src/inner_functions/: mod.rs
src/inner_functions/crazy_functions/: chinese_digit_10000000000000000_middle_compat.rs  mod.rs
src/number_to_chinese/: error.rs  functions.rs  functions_test.rs  mod.rs  naive.rs  number_to_chinese_error.rs  traits.rs
tests/: chinese_number.rs  chinese_number_to_number.rs  chinese_to_number.rs  number_to_chinese.rs  self.rs
