[package]
name = "chinese-number"
version = "0.6.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/chinese-number"
homepage = "https://magiclen.org/chinese-number"
keywords = ["chinese", "number", "integer", "money", "float"]
categories = ["no-std", "localization", "parser-implementations", "value-formatting"]
description = "Convert primitive numbers to Chinese numbers, or parse Chinese numbers to primitive numbers."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/chinese-number"
branch = "master"

[dependencies]
chinese-variant = "1"

[dev-dependencies]
assert_approx_eq = "1.1"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
all-features = true